--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-/UnityBulid/
+
+UnityBulid/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
